# pdf-split

./: .gitmodules  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  pyrightconfig.json
.github/actions/setup/: action.yaml
.github/workflows/: code_quality.yaml
pdf_split/: __init__.py  __main__.py  constants.py  main.py  pdf_split.py
requirements/: code_quality.txt  dev.txt
src/pdf_split/: __init__.py
tests/pdf_split/: test_init.py
