[project]
name = "pdf-split"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hello = "pdf_split:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.393",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]
