[project]
name = "pdf-split"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hello = "pdf_split:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.393",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
